--- a/skills.html
+++ b/skills.html
@@ -276,60 +276,172 @@
         <p class="skills-hero-desc">A multi-disciplinary skillset across design and development. I create modern, user-centric digital experiences in web, UI/UX, graphics, and games.</p>
       </div>
     </section>
-    <section class="skills-cards-section">
-      <div class="skills-cards-grid">
-        <div class="skill-card web">
-          <div class="skill-badge web"><span class="skill-icon">💻</span></div>
-          <h3>Web Development</h3>
-          <ul>
-            <li>HTML5 &amp; CSS3</li>
-            <li>JavaScript (ES6+)</li>
-            <li>React.js, Next.js</li>
-            <li>Node.js, Express</li>
-            <li>REST APIs</li>
-            <li>Responsive Design</li>
-            <li>Git &amp; GitHub</li>
-          </ul>
+    <section class="skills-list-section">
+      <div class="skills-category web">
+        <div class="skills-category-accent"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="Web"/></div>
+        <h2 class="skills-category-title">Web Development</h2>
+        <div class="skills-tech-list">
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain.svg" alt="HTML5"/>HTML5</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain.svg" alt="CSS3"/>CSS3</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-plain.svg" alt="JavaScript"/>JavaScript</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React"/>React.js</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" alt="Next.js"/>Next.js</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-plain.svg" alt="Node.js"/>Node.js</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" alt="Express"/>Express</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub"/>GitHub</span>
         </div>
-        <div class="skill-card uiux">
-          <div class="skill-badge uiux"><span class="skill-icon">🖌️</span></div>
-          <h3>UI/UX Design</h3>
-          <ul>
-            <li>Figma, Adobe XD</li>
-            <li>User Research</li>
-            <li>Wireframing &amp; Prototyping</li>
-            <li>Design Systems</li>
-            <li>Interaction Design</li>
-            <li>Usability Testing</li>
-          </ul>
+      </div>
+      <div class="skills-category uiux">
+        <div class="skills-category-accent"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="UI/UX"/></div>
+        <h2 class="skills-category-title">UI/UX Design</h2>
+        <div class="skills-tech-list">
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="Figma"/>Figma</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/xd/xd-plain.svg" alt="Adobe XD"/>Adobe XD</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="User Research"/>User Research</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="Wireframing"/>Wireframing</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="Prototyping"/>Prototyping</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="Design Systems"/>Design Systems</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/xd/xd-plain.svg" alt="Interaction Design"/>Interaction Design</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/xd/xd-plain.svg" alt="Usability Testing"/>Usability Testing</span>
         </div>
-        <div class="skill-card graphic">
-          <div class="skill-badge graphic"><span class="skill-icon">🎨</span></div>
-          <h3>Graphic Design</h3>
-          <ul>
-            <li>Adobe Photoshop</li>
-            <li>Adobe Illustrator</li>
-            <li>Branding &amp; Identity</li>
-            <li>Poster &amp; Banner Design</li>
-            <li>Photo Manipulation</li>
-            <li>Typography</li>
-          </ul>
+      </div>
+      <div class="skills-category graphic">
+        <div class="skills-category-accent"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/illustrator/illustrator-plain.svg" alt="Graphic"/></div>
+        <h2 class="skills-category-title">Graphic Design</h2>
+        <div class="skills-tech-list">
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/photoshop/photoshop-plain.svg" alt="Photoshop"/>Adobe Photoshop</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/illustrator/illustrator-plain.svg" alt="Illustrator"/>Adobe Illustrator</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/illustrator/illustrator-plain.svg" alt="Branding"/>Branding &amp; Identity</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/illustrator/illustrator-plain.svg" alt="Poster"/>Poster &amp; Banner Design</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/photoshop/photoshop-plain.svg" alt="Photo Manipulation"/>Photo Manipulation</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/illustrator/illustrator-plain.svg" alt="Typography"/>Typography</span>
         </div>
-        <div class="skill-card game">
-          <div class="skill-badge game"><span class="skill-icon">🎮</span></div>
-          <h3>Game Development</h3>
-          <ul>
-            <li>Unity (C#)</li>
-            <li>Godot</li>
-            <li>Game Design</li>
-            <li>2D/3D Animation</li>
-            <li>Level Design</li>
-            <li>Asset Integration</li>
-          </ul>
+      </div>
+      <div class="skills-category game">
+        <div class="skills-category-accent"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/unity/unity-original.svg" alt="Game"/></div>
+        <h2 class="skills-category-title">Game Development</h2>
+        <div class="skills-tech-list">
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/unity/unity-original.svg" alt="Unity"/>Unity (C#)</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/godot/godot-original.svg" alt="Godot"/>Godot</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/unity/unity-original.svg" alt="Game Design"/>Game Design</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/godot/godot-original.svg" alt="Animation"/>2D/3D Animation</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/unity/unity-original.svg" alt="Level Design"/>Level Design</span>
+          <span class="skills-tech"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/godot/godot-original.svg" alt="Asset Integration"/>Asset Integration</span>
         </div>
       </div>
     </section>
   </main>
+  <style>
+    .skills-list-section {
+      max-width: 800px;
+      margin: 0 auto 3.5rem auto;
+      padding: 0 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 2.5rem;
+    }
+    .skills-category {
+      margin-bottom: 1.5rem;
+      background: #fff;
+      border-radius: 1.5rem;
+      box-shadow: 0 4px 24px rgba(120,115,245,0.10), 0 2px 8px rgba(0,0,0,0.08);
+      padding: 2.2rem 2rem 1.5rem 2rem;
+      position: relative;
+      overflow: visible;
+      border-left: 8px solid #7873f5;
+      transition: box-shadow 0.18s, border-color 0.18s;
+    }
+    .skills-category.web { border-left-color: #7873f5; }
+    .skills-category.uiux { border-left-color: #ff6ec4; }
+    .skills-category.graphic { border-left-color: #42e695; }
+    .skills-category.game { border-left-color: #ffb347; }
+    .skills-category:hover {
+      box-shadow: 0 8px 32px rgba(120,115,245,0.18);
+      border-left-width: 12px;
+    }
+    .skills-category-accent {
+      position: absolute;
+      top: -32px;
+      left: 24px;
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      background: #f3e7ff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 2px 8px rgba(120,115,245,0.10);
+      border: 3px solid #fff;
+      z-index: 2;
+      font-size: 2.1rem;
+      transition: background 0.22s, transform 0.22s;
+    }
+    .skills-category.web .skills-category-accent { background: linear-gradient(135deg, #7873f5 60%, #f3e7ff 100%); }
+    .skills-category.uiux .skills-category-accent { background: linear-gradient(135deg, #ff6ec4 60%, #f3e7ff 100%); }
+    .skills-category.graphic .skills-category-accent { background: linear-gradient(135deg, #42e695 60%, #f3e7ff 100%); }
+    .skills-category.game .skills-category-accent { background: linear-gradient(135deg, #ffb347 60%, #f3e7ff 100%); }
+    .skills-category-accent img {
+      width: 38px;
+      height: 38px;
+      display: block;
+    }
+    .skills-category-title {
+      font-size: 1.5rem;
+      font-weight: 800;
+      color: #2a254d;
+      margin-bottom: 1.1rem;
+      letter-spacing: -1px;
+      background: linear-gradient(90deg, #ff6ec4 0%, #7873f5 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      margin-left: 70px;
+      margin-top: 0.2rem;
+    }
+    .skills-tech-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.2rem 2.2rem;
+      align-items: center;
+      margin-left: 70px;
+    }
+    .skills-tech {
+      display: flex;
+      align-items: center;
+      gap: 0.6rem;
+      font-size: 1.08rem;
+      font-weight: 600;
+      color: #7873f5;
+      background: #f7f7fa;
+      border-radius: 999px;
+      padding: 0.4rem 1.2rem 0.4rem 0.8rem;
+      box-shadow: 0 2px 12px rgba(120,115,245,0.07);
+      border: 1.5px solid #e3e6ff;
+      white-space: nowrap;
+      transition: background 0.2s, color 0.2s, box-shadow 0.2s;
+      cursor: pointer;
+    }
+    .skills-tech:hover {
+      background: linear-gradient(90deg, #ff6ec4 0%, #7873f5 100%);
+      color: #fff;
+      box-shadow: 0 8px 32px rgba(120,115,245,0.18);
+      border-color: #ff6ec4;
+    }
+    .skills-tech img {
+      width: 28px;
+      height: 28px;
+      display: block;
+    }
+    @media (max-width: 700px) {
+      .skills-list-section { gap: 1.5rem; }
+      .skills-category-title { font-size: 1.1rem; margin-left: 0; }
+      .skills-category-accent { left: 50%; transform: translateX(-50%); top: -28px; }
+      .skills-tech-list { gap: 0.7rem 1.1rem; margin-left: 0; }
+      .skills-tech { font-size: 0.98rem; padding: 0.3rem 0.7rem 0.3rem 0.5rem; }
+      .skills-tech img { width: 22px; height: 22px; }
+      .skills-category { padding: 1.5rem 0.7rem 1.1rem 0.7rem; }
+    }
+  </style>
 
   <footer class="footer-modern">
     <div class="footer-container">
@@ -355,7 +467,7 @@
         <h3>Connect</h3>
         <div class="footer-social-icons">
           <a href="#" class="icon linkedin" title="LinkedIn" target="_blank"><svg width="24" height="24" fill="currentColor"><path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-9h3v9zm-1.5-10.28c-.97 0-1.75-.79-1.75-1.75s.78-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm13.5 10.28h-3v-4.5c0-1.08-.02-2.47-1.5-2.47-1.5 0-1.73 1.17-1.73 2.39v4.58h-3v-9h2.89v1.23h.04c.4-.75 1.38-1.54 2.84-1.54 3.04 0 3.6 2 3.6 4.59v4.72z"/></svg></a>
-          <a href="#" class="icon instagram" title="Instagram" target="_blank"><svg width="24" height="24" fill="currentColor"><path d="M12 2.2c3.2 0 3.584.012 4.85.07 1.17.056 1.97.24 2.43.41.59.22 1.01.48 1.45.92.44.44.7.86.92 1.45.17.46.354 1.26.41 2.43.058 1.266.07 1.65.07 4.85s-.012 3.584-.07 4.85c-.056 1.17-.24 1.97-.41 2.43-.22.59-.48 1.01-.92 1.45-.44.44-.86.7-1.45.92-.46.17-1.26.354-2.43.41-1.266.058-1.65.07-4.85.07zm0-2.2c-3.259 0-3.667.012-4.947.07-1.276.058-2.147.24-2.89.51-.8.29-1.48.68-2.15 1.35-.67.67-1.06 1.35-1.35 2.15-.27.74-.452 1.614-.51 2.89-.058 1.28-.07 1.688-.07 4.947s.012 3.667.07 4.947c.058 1.276.24 2.147.51 2.89.29.8.68 1.48 1.35 2.15.67.67 1.35 1.06 2.15 1.35.74.27 1.614.452 2.89.51 1.28.058 1.688.07 4.947.07s3.667-.012 4.947-.07c1.276-.058 2.147-.24 2.89-.51.8-.29 1.48-.68 2.15-1.35.67-.67 1.06-1.35 1.35-2.15.27-.74.452-1.614.51-2.89.058-1.28.07-1.688.07-4.947s-.012-3.667-.07-4.947c-.058-1.276-.24-2.147-.51-2.89-.29-.8-.68-1.48-1.35-2.15-.67-.67-1.35-1.06-2.15-1.35-.74-.27-1.614-.452-2.89-.51-1.28-.058-1.688-.07-4.947-.07z"/><circle cx="12" cy="12" r="3.2"/><circle cx="18.4" cy="5.6" r="1.44"/></svg></a>
+          <a href="https://instagram.com/i_am_.walker" class="icon instagram" title="Instagram: @i_am_.walker" target="_blank"><svg width="24" height="24" fill="currentColor"><path d="M12 2.2c3.2 0 3.584.012 4.85.07 1.17.056 1.97.24 2.43.41.59.22 1.01.48 1.45.92.44.44.7.86.92 1.45.17.46.354 1.26.41 2.43.058 1.266.07 1.65.07 4.85s-.012 3.584-.07 4.85c-.056 1.17-.24 1.97-.41 2.43-.22.59-.48 1.01-.92 1.45-.44.44-.86.7-1.45.92-.46.17-1.26.354-2.43.41-1.266.058-1.65.07-4.85.07s-3.584-.012-4.85-.07c-1.17-.056-1.97-.24-2.43-.41-.59-.22-1.01-.48-1.45-.92-.44-.44-.7-.86-.92-1.45-.17-.46-.354-1.26-.41-2.43-.058-1.266-.07-1.65-.07-4.85s.012-3.584.07-4.85c.056-1.17.24-1.97.41-2.43.22-.59.48-1.01.92-1.45.44-.44.86-.7 1.45-.92.46-.17 1.26-.354 2.43-.41 1.266-.058 1.65-.07 4.85-.07zm0-2.2c-3.259 0-3.667.012-4.947.07-1.276.058-2.147.24-2.89.51-.8.29-1.48.68-2.15 1.35-.67.67-1.06 1.35-1.35 2.15-.27.74-.452 1.614-.51 2.89-.058 1.28-.07 1.688-.07 4.947s.012 3.667.07 4.947c.058 1.276.24 2.147.51 2.89.29.8.68 1.48 1.35 2.15.67.67 1.35 1.06 2.15 1.35.74.27 1.614.452 2.89.51 1.28.058 1.688.07 4.947.07s3.667-.012 4.947-.07c1.276-.058 2.147-.24 2.89-.51.8-.29 1.48-.68 2.15-1.35.67-.67 1.06-1.35 1.35-2.15.27-.74.452-1.614.51-2.89.058-1.28.07-1.688.07-4.947s-.012-3.667-.07-4.947c-.058-1.276-.24-2.147-.51-2.89-.29-.8-.68-1.48-1.35-2.15-.67-.67-1.35-1.06-2.15-1.35-.74-.27-1.614-.452-2.89-.51-1.28-.058-1.688-.07-4.947-.07z"/><circle cx="12" cy="12" r="3.2"/><circle cx="18.4" cy="5.6" r="1.44"/></svg></a>
           <a href="mailto:amankumar1948sahu@gmail.com" class="icon gmail" title="Gmail" target="_blank"><svg width="24" height="24" fill="currentColor"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 2v.01L12 13 4 6.01V6h16zM4 20v-9.99l7.99 7.99c.39.39 1.02.39 1.41 0L20 10.01V20H4z"/></svg></a>
           <a href="https://github.com/amankuamr" class="icon github" title="GitHub" target="_blank"><svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.373 0 12c0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.083-.729.083-.729 1.205.085 1.84 1.237 1.84 1.237 1.07 1.834 2.807 1.304 3.492.997.108-.775.418-1.305.762-1.605-2.665-.305-5.466-1.334-5.466-5.931 0-1.31.468-2.381 1.236-3.221-.124-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.3 1.23.957-.266 1.984-.399 3.003-.404 1.018.005 2.046.138 3.006.404 2.289-1.552 3.295-1.23 3.295-1.23.653 1.653.242 2.873.119 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.803 5.624-5.475 5.921.43.371.823 1.102.823 2.222 0 1.606-.014 2.898-.014 3.293 0 .321.218.694.825.576C20.565 21.796 24 17.299 24 12c0-6.627-5.373-12-12-12z"/></svg></a>
         </div>
